<resources>
    <string name="app_name">Wiim</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="result">Resultado</string>
    <string name="results">Resultados</string>
    <string name="error">Erro</string>
    <string name="settings">Configurações</string>
    <string name="server">Servidor</string>
    <string name="exit">Sair</string>
    <string name="icon">Ícone</string>
    <string name="status">Status</string>
    <string name="qrcode_point_to_scan">Aponte o celular para o QRCode</string>
    <string name="qrcode_error">Erro de leitura ou QR Code inválido.\n\nLog:&#160;</string>
    <string name="permission_denied">Permissão negada, não é possivel acessar a câmera.</string>
    <string name="connection_error">Erro de conexão.</string>

    <!-- Activities -->
    <string name="title_activity_result">Resultado</string>
    <string name="title_activity_tag">Tag</string>
    <string name="title_activity_process">Processo</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="loading">Carregando…</string>

    <!-- Connection settings -->
    <string name="pref_header_connection">Conexão</string>

    <string name="pref_title_server_address">Endereço do servidor</string>
    <string name="pref_default_server_address">http://192.168.0.1/</string>
    <string name="pref_invalid_url">URL inválida</string>

    <string name="pref_title_update_interval">Intervalo de atualização</string>
    <string name="pref_desc_update_interval">Tempo em milissegundos com que as variáveis serão atualizadas.</string>

    <string name="pref_desc_fault_tolerance">Quantidade de falhas toleradas para cada 100 requisições</string>
    <string name="pref_title_fault_tolerance">Tolerância a falhas</string>


    <!-- QR Code settings -->
    <string name="pref_header_qrcode">QR Code</string>

    <string name="pref_title_beep">Reproduzir Som</string>
    <string name="pref_title_summary">Emite um beep ao realizar leitura do QRCode</string>

    <!-- Notifications settings -->
    <string name="pref_header_notifications">Notificações</string>

    <string name="pref_title_enable_notifications">Habilitar notificações</string>
    <string name="pref_title_ringtone">Toque</string>
    <string name="pref_ringtone_silent">Silencioso</string>
    <string name="pref_title_vibrate">Vibrar</string>

    <!-- About settings -->
    <string name="pref_header_about">Sobre</string>

    <string name="pref_title_version">Versão Wiim</string>
    <string name="pref_desc_version">0.5b1 (Beta)</string>
    <string name="pref_title_contributors">Colaboradores</string>
    <string name="pref_desc_contributors"><![CDATA[Andreza Castillho \nJosé Almeida \nMatheus Figueiró \nRodrigo Amaro]]></string>
    <string name="pref_title_visit_repo">Visite o repositório do projeto</string>
    <string name="pref_url_visit_repo">https://bitbucket.org/mecatronica-assis/wiim-android</string>
    <string name="pref_title_copyright">Wiim Industrial Information Management</string>
    <string name="pref_desc_copyright">Copyright © 2018</string>
    <string name="pref_title_contact">Contato</string>
    <string name="pref_desc_contact">Entre em contato conosco</string>
    <string name="pref_mail_contact">mailto:jose.afga@gmail.com</string>
    <string name="icons_by">Ícones por</string>
    <string name="icons_authors">Smashicons de www.flaticon.com \nwww.icons8.com</string>

    <!-- Processes fragment -->
    <string name="required_permissions">É necessário conceder as permissões de acesso</string>
    <string name="qrcode">QR Code</string>
    <string name="processes">Processos</string>
</resources>
