<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:selectable="false"
        android:summary="@string/pref_desc_version"
        android:title="@string/pref_title_version" />

    <Preference
        android:selectable="false"
        android:summary="@string/pref_desc_contributors"
        android:title="@string/pref_title_contributors" />

    <!-- preference opens url in browser -->
    <Preference android:title="@string/pref_title_visit_repo">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/pref_url_visit_repo" />
    </Preference>

    <!-- preference opens url in browser -->
    <Preference
        android:summary="@string/pref_desc_contact"
        android:title="@string/pref_title_contact">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/pref_mail_contact" />
    </Preference>

    <Preference
        android:selectable="false"
        android:title="@string/pref_title_copyright" />

</PreferenceScreen>